# runway

./: README.md  package-lock.json  package.json  tailwind.config.cjs
src/: app.css  app.postcss  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/common/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/facial_rec/: mod.rs
src-tauri/src/facial_rec/sface/: mod.rs
src-tauri/src/facial_rec/yunet/: mod.rs
src-tauri/src/frontend_content/: mod.rs  sidebar.rs  state_control.rs
src/components/: ConfirmSelections.svelte  DBcount.svelte  SelectCategory.svelte  SelectModel.svelte  SelectPath.svelte  SetParameters.svelte  SetResultThresholds.svelte  Sidebar.svelte
src/components/results/: Results.svelte
src/components/results/load/: LoadOnly.svelte
src/components/results/query/: MultipleFaces.svelte  OneFace.svelte  QueryDB.svelte
src/components/results/video_feed/: VideoFeed.svelte
src/routes/: +page.svelte
