[package]
name = "runway"
version = "0.1.0"
description = "A place to check out ML models"
authors = ["RSB"]
license = ""
repository = ""
default-run = "runway"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "protocol-asset", "window-all", "dialog-all"] }
opencv = { version = "0.93.5", features = ["clang-runtime"] }
mongodb = "2.8.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rayon = "1.8.0"
futures = "0.3"
base64 = "0.21.5"
ahash = "0.8.7"
time = "0.3.35"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
